# assignment-1-data-analytics

./: README.md  pyproject.toml
src/: assignment.ipynb  defs.py
src/.ipynb_checkpoints/: assignment-checkpoint.ipynb
