[project]
name = "assignment-1-data-analytics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Destin Ecarma", email = "109215379+DestinEcarma@users.noreply.github.com" }
]
dependencies = [
    "notebook>=7.3.2",
    "plotly>=5.24.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
